apps/travel-planner/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: travel-planner
  namespace: travel-planner
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: http
    name: http
  selector:
    app: travel-planner
