apps/travel-planner/base/ingress-external.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: travel-planner-external
  namespace: travel-planner
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - vacation.brettswift.com
    secretName: brettswift-com-tls
  rules:
  - host: vacation.brettswift.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: travel-planner
            port:
              number: 3000
